--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Ki Jung Kim",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.4",
+    "pg": "^8.3.0"
   }
 }
